# pymember

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
pymembercli/: TaskItem.py  cmds.py  pymember.py  task_item.py  util.py
pymembercli/data/: tasks.json
tests/: test_cmds.py
